# cython-coverage-projects

./: README.md  cython-coverage-fix.patch  environment.txt
cython-coverage-scikit-build/: CMakeLists.txt  pyproject.toml  setup.py
cython-coverage-scikit-build/tasket/: CMakeLists.txt  __init__.py  _comp.pyx
cython-coverage-scikit-build/tests/: test_tasket.py
cython-coverage-setuptools/: setup.py
cython-coverage-setuptools/tasket/: _hello.py
